--- a/about.html
+++ b/about.html
@@ -155,41 +155,50 @@
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
-                    <img class="img-fluid rounded mb-4 mb-lg-0" style=" height: 500px;" src="img/about.jpg" alt="">
+            <div class="text-center col-lg-12">
+                <div class="mb-4">
+                    <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">About Company</h5>
+                    <h1>Professional Overseas Education</h1><br>
+
+                    <h3>Hykin Overseas is about Education,visa and Tours & Travels.</h3><br>
+
+                    <h5>Hykin Overseas never give any false commitments. It's always stick to the words which were
+                        delivered to the clients</h5>
+
+
                 </div>
-                <div class="col-lg-7">
-                    <div class="text-left mb-4">
-                        <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">About Company</h5>
-                        <h1>Professional Overseas Education</h1><br>
-
-                        <h3>Hykin Overseas is about Education,visa and Tours & Travels.</h3><br>
-
-                        <h5>Hykin Overseas never give any false commitments. It's always stick to the words which were
-                            delivered to the clients</h5>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <img class="img-fluid rounded mb-4 mb-lg-0" style=" height: 500px;" src="img/about.jpg" alt="">
 
 
+                        <p class="mt-5">Hykin Overseas Education is a reputable organization that assists students who
+                            are interested
+                            in
+                            studying abroad. With over a decade of experience in the education industry, Hykin's
+                            overseas
+                            education has helped numerous students achieve their dreams of studying in top universities
+                            around the world. <br><br>
+                            One of the main advantages of choosing Hykin overseas education is the personalized approach
+                            they take with each student. The team of experienced counsellors works closely with students
+                            to
+                            understand their academic background, interests, and aspirations. Based on this information,
+                            they provide personalized advice on which universities to apply to, which courses to take,
+                            and
+                            even guide scholarships and financial aid. <br><br>
+                            Another key feature of Hykin overseas education is its comprehensive support for students
+                            throughout the application process. This includes assistance with documentation, visa
+                            application, and even travel arrangements. Students can be assured that they will have a
+                            hassle-free experience when applying for universities through Hykin Overseas Education.
+                            <br><br>
+                            Overall, choosing Hykin overseas education is a wise investment for students who want to
+                            achieve
+                            their academic goals and broaden their horizons. With their experienced team, personalized
+                            approach, and comprehensive support, students can be assured of a successful and rewarding
+                            academic journey abroad.
+                        </p>
+                        <!-- <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a> -->
                     </div>
-                    <p>Hykin Overseas Education is a reputable organization that assists students who are interested in
-                        studying abroad. With over a decade of experience in the education industry, Hykin's overseas
-                        education has helped numerous students achieve their dreams of studying in top universities
-                        around the world. <br><br>
-                        One of the main advantages of choosing Hykin overseas education is the personalized approach
-                        they take with each student. The team of experienced counsellors works closely with students to
-                        understand their academic background, interests, and aspirations. Based on this information,
-                        they provide personalized advice on which universities to apply to, which courses to take, and
-                        even guide scholarships and financial aid. <br><br>
-                        Another key feature of Hykin overseas education is its comprehensive support for students
-                        throughout the application process. This includes assistance with documentation, visa
-                        application, and even travel arrangements. Students can be assured that they will have a
-                        hassle-free experience when applying for universities through Hykin Overseas Education. <br><br>
-                        Overall, choosing Hykin overseas education is a wise investment for students who want to achieve
-                        their academic goals and broaden their horizons. With their experienced team, personalized
-                        approach, and comprehensive support, students can be assured of a successful and rewarding
-                        academic journey abroad.
-                    </p>
-                    <!-- <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a> -->
                 </div>
             </div>
         </div>
@@ -310,12 +319,13 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
+                            <a class="btn btn-outline-light  btn-square mr-2"
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
