--- a/index.html
+++ b/index.html
@@ -712,10 +712,11 @@
                         <div class="d-flex justify-content-start mt-4">
                             <!-- <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light  btn-square mr-2"
-                                href="facebook.com/profile.php?id=61550644413617"><i class="fab fa-facebook-f"></i></a>
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
+                                    class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-square mr-2"
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                             "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
