--- a/work-visa.html
+++ b/work-visa.html
@@ -254,13 +254,13 @@
                             This means that traveling to an embassy or consulate may not be necessary. However, the
                             traveler may still have to go to a center to have their biometrics taken (as is the case
                             with Canada).</p>
-                            <p>Supporting documentation for a work visa application usually includes:</p>
-                            <ul>
-                                <li>Letters from previous employers</li>
-                                <li>Letter from the prospective employer in the destination country</li>
-                                <li>Qualifications</li>
-                                <li>Signed contract (if applicable)</li>
-                            </ul>
+                        <p>Supporting documentation for a work visa application usually includes:</p>
+                        <ul>
+                            <li>Letters from previous employers</li>
+                            <li>Letter from the prospective employer in the destination country</li>
+                            <li>Qualifications</li>
+                            <li>Signed contract (if applicable)</li>
+                        </ul>
 
 
                     </div>
@@ -440,18 +440,18 @@
                                             <a class="btn btn-outline-light mx-1" href="stock-market.html"
                                                 role="button">More Details</a>
                                             <button class=" btn btn-outline-light mx-1">More Details</button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        <!-- </div>
+                <!-- </div>
                                     </div> -->
-                                    <!-- <div class="bg-secondary p-4">
+                <!-- <div class="bg-secondary p-4">
                                         <h5 class="m-0">Stock Market</h5> -->
-                                        <!-- <p class="m-0">Stock Market</p> -->
-                                    <!-- </div>
+                <!-- <p class="m-0">Stock Market</p> -->
+                <!-- </div>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 text-center team mb-4">
@@ -461,22 +461,22 @@
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="software-training.html"
                                                 role="button">More Details</a> -->
-                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                <!-- <button class="btn btn-outline-light mx-1"></button> -->
+                <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        <!-- </div>
+                <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
                                         <h5 class="m-0">Software Training</h5> -->
-                                        <!-- <p class="m-0">Software Training</p> -->
-                                    <!-- </div>
+                <!-- <p class="m-0">Software Training</p> -->
+                <!-- </div>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-3.jpg" alt="">
@@ -495,7 +495,7 @@
                                     </div>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-4.jpg" alt="">
@@ -514,12 +514,12 @@
                                     </div>
                                 </div>
                             </div> -->
-                        </div>
-                    </div>
-                </div>
-                <!-- Team End -->
             </div>
         </div>
+    </div>
+    <!-- Team End -->
+    </div>
+    </div>
     </div>
     <!-- Detail End -->
 
@@ -537,12 +537,13 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
+                            <a class="btn btn-outline-light  btn-square mr-2"
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            "><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
